--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+/* --- */
+
+/* Try to keep sweeping adjustments to HTML elements themselves in this section. */
+@layer base {
+  html {
+    @apply subpixel-antialiased;
+  }
+
+  body {
+    @apply text-slate-700 leading-relaxed;
+    @apply bg-gradient-to-br from-cyan-600 to-emerald-600;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Sweeping adjustments to elements more specific than `base` go here. */
+@layer components {
+  #approot {
+    @apply min-h-screen;
+  }
 }
